--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tldraw/sync": "3.12.0-canary.f5c40cbda19f",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tldraw": "3.12.0-canary.f5c40cbda19f"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
